# easypg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: compression.rs  lib.rs  main.rs  providers.rs
tests/: cli.rs
