[package]
name = "easypg"
version = "0.1.0"
edition = "2021"
authors = ["Adam Eury"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flate2 = "1.0"
indicatif = "0.17.0"
clap = { version = "3.2", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
